3rd task and a timer created

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -3,8 +3,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED_toggle,8,128,StartLedToggle,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Timers01
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED_toggle,8,128,StartLedToggle,Default,NULL,Dynamic,NULL,NULL;LED_trigger,25,128,StartLedTrigger,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Timers01=LED_Timer,LedOffCbk,osTimerOnce,Default,NULL,Dynamic,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
