--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -3,9 +3,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Timers01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED_toggle,8,128,StartLedToggle,Default,NULL,Dynamic,NULL,NULL;LED_trigger,25,128,StartLedTrigger,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.Timers01=LED_Timer,LedOffCbk,osTimerOnce,Default,NULL,Dynamic,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Mutexes01
+FREERTOS.Mutexes01=LedMutex,Dynamic,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED_toggle,29,128,StartLedToggle,Default,NULL,Dynamic,NULL,NULL;LED_trigger,29,128,StartLedTrigger,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
