--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -2,11 +2,9 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.Events01=
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,Events01,FootprintOK,Queues01
-FREERTOS.Queues01=LedQueue,8,uint8_t,0,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTrigger,29,128,LedTriggerStart,Default,NULL,Dynamic,NULL,NULL;LedToggle,29,128,LedToggleStart,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
@@ -16,34 +14,37 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IP5=USB_OTG_FS
-Mcu.IPNb=6
+Mcu.IP4=TIM3
+Mcu.IP5=USART3
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PG7
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB3
-Mcu.Pin19=PB7
+Mcu.Pin10=PG6
+Mcu.Pin11=PG7
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_SYS_VS_tim7
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_tim7
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PB0
-Mcu.Pin6=PB14
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PG6
-Mcu.PinsNb=22
+Mcu.Pin5=PA6
+Mcu.Pin6=PB0
+Mcu.Pin7=PB14
+Mcu.Pin8=PD8
+Mcu.Pin9=PD9
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -90,6 +91,7 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA6.Signal=S_TIM3_CH1
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
@@ -266,6 +268,12 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Pulse-PWM Generation1 CH1
+TIM3.Prescaler=1465-1
+TIM3.Pulse-PWM\ Generation1\ CH1=10000
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -274,6 +282,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F413ZH
 boardIOC=true
 rtos.0.ip=FREERTOS
