--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -2,9 +2,10 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FREERTOS.Events01=
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK
+FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Events01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTrigger,29,128,LedTriggerStart,Default,NULL,Dynamic,NULL,NULL;LedToggle,29,128,LedToggleStart,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
