2 timers in master and slave mode

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -2,10 +2,9 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.Events01=
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Events01
+FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTrigger,29,128,LedTriggerStart,Default,NULL,Dynamic,NULL,NULL;LedToggle,29,128,LedToggleStart,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -17,29 +16,35 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM3
-Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP5=TIM4
+Mcu.IP6=USART3
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PG6
-Mcu.Pin11=PG7
-Mcu.Pin12=PC6
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PD12
+Mcu.Pin11=PG6
+Mcu.Pin12=PG7
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PC9
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim7
-Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_SYS_VS_tim7
+Mcu.Pin27=VP_TIM3_VS_no_output2
+Mcu.Pin28=VP_TIM4_VS_ControllerModeTrigger
+Mcu.Pin29=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA6
@@ -47,7 +52,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB14
 Mcu.Pin8=PD8
 Mcu.Pin9=PD9
-Mcu.PinsNb=25
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -136,6 +141,11 @@ PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=LED_Int
 PC6.Locked=true
 PC6.Signal=GPXTI6
+PC7.Locked=true
+PC7.Signal=S_TIM3_CH2
+PC9.Locked=true
+PC9.Signal=S_TIM3_CH4
+PD12.Signal=S_TIM4_CH1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -192,7 +202,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -280,10 +290,31 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4
+SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM3.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Pulse-PWM Generation1 CH1
-TIM3.Prescaler=1465-1
-TIM3.Pulse-PWM\ Generation1\ CH1=10000
+TIM3.CounterMode=TIM_COUNTERMODE_UP
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Pulse-PWM Generation1 CH1,AutoReloadPreload,TIM_MasterOutputTrigger,Period,CounterMode,OC1Preload_PWM,Channel-Output Compare2 No Output,OCMode_2,Pulse-Output Compare2 No Output,OC2Preload
+TIM3.OC1Preload_PWM=ENABLE
+TIM3.OC2Preload=ENABLE
+TIM3.OCMode_2=TIM_OCMODE_ACTIVE
+TIM3.Period=1000-1
+TIM3.Prescaler=96-1
+TIM3.Pulse-Output\ Compare2\ No\ Output=250
+TIM3.Pulse-PWM\ Generation1\ CH1=500
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1
+TIM4.Period=1000-1
+TIM4.Prescaler=96-1
+TIM4.Pulse-PWM\ Generation1\ CH1=500
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -292,8 +323,12 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM3_VS_no_output2.Signal=TIM3_VS_no_output2
+VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
+VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
+VP_TIM4_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM4_VS_ControllerModeTrigger.Signal=TIM4_VS_ControllerModeTrigger
 board=NUCLEO-F413ZH
 boardIOC=true
 rtos.0.ip=FREERTOS
