trig and marker waves

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -47,16 +47,13 @@ Mcu.Pin27=PB7
 Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin29=VP_SYS_VS_tim7
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=VP_TIM3_VS_no_output2
-Mcu.Pin31=VP_TIM4_VS_ControllerModeTrigger
-Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA6
 Mcu.Pin8=PB0
 Mcu.Pin9=PB14
-Mcu.PinsNb=33
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -318,24 +315,21 @@ TIM2.IC2Prescaler=TIM_ICPSC_DIV1
 TIM2.IPParameters=Period,EncoderMode,IC1Prescaler,IC2Prescaler,ClockDivision
 TIM2.Period=32
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM3.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Pulse-PWM Generation1 CH1,AutoReloadPreload,TIM_MasterOutputTrigger,Period,CounterMode,OC1Preload_PWM,Channel-Output Compare2 No Output,OCMode_2,Pulse-Output Compare2 No Output,OC2Preload
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Pulse-PWM Generation1 CH1,AutoReloadPreload,TIM_MasterOutputTrigger,Period,CounterMode,OC1Preload_PWM,TIM_MasterSlaveMode
 TIM3.OC1Preload_PWM=ENABLE
-TIM3.OC2Preload=ENABLE
-TIM3.OCMode_2=TIM_OCMODE_ACTIVE
-TIM3.Period=1000-1
+TIM3.Period=1024-1
 TIM3.Prescaler=96-1
-TIM3.Pulse-Output\ Compare2\ No\ Output=250
-TIM3.Pulse-PWM\ Generation1\ CH1=500
-TIM3.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
+TIM3.Pulse-PWM\ Generation1\ CH1=512
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1
-TIM4.Period=1000-1
-TIM4.Prescaler=96-1
-TIM4.Pulse-PWM\ Generation1\ CH1=500
+TIM4.Period=1024-1
+TIM4.Prescaler=3072-1
+TIM4.Pulse-PWM\ Generation1\ CH1=16
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -344,12 +338,6 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
-VP_TIM3_VS_no_output2.Mode=Output Compare2 No Output
-VP_TIM3_VS_no_output2.Signal=TIM3_VS_no_output2
-VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
-VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
-VP_TIM4_VS_ControllerModeTrigger.Mode=Trigger Mode
-VP_TIM4_VS_ControllerModeTrigger.Signal=TIM4_VS_ControllerModeTrigger
 board=NUCLEO-F413ZH
 boardIOC=true
 rtos.0.ip=FREERTOS
