--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -15,44 +15,43 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IP6=USART3
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD8
-Mcu.Pin11=PD9
-Mcu.Pin12=PD12
-Mcu.Pin13=PG6
-Mcu.Pin14=PG7
-Mcu.Pin15=PC6
-Mcu.Pin16=PC7
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
+Mcu.Pin10=PD12
+Mcu.Pin11=PG6
+Mcu.Pin12=PG7
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PC8
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PB3
-Mcu.Pin27=PB7
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB3
+Mcu.Pin25=PB7
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_SYS_VS_tim7
+Mcu.Pin28=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin29=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA6
-Mcu.Pin8=PB0
-Mcu.Pin9=PB14
+Mcu.Pin5=PA6
+Mcu.Pin6=PB0
+Mcu.Pin7=PB14
+Mcu.Pin8=PD8
+Mcu.Pin9=PD9
 Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -73,13 +72,10 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-PA0.Signal=S_TIM2_CH1_ETR
-PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
 PA10.Locked=true
@@ -210,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -296,10 +292,6 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
-SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
@@ -308,12 +300,6 @@ SH.S_TIM3_CH4.0=TIM3_CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM2.EncoderMode=TIM_ENCODERMODE_TI1
-TIM2.IC1Prescaler=TIM_ICPSC_DIV1
-TIM2.IC2Prescaler=TIM_ICPSC_DIV1
-TIM2.IPParameters=Period,EncoderMode,IC1Prescaler,IC2Prescaler,ClockDivision
-TIM2.Period=32
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
@@ -323,13 +309,15 @@ TIM3.Period=1024-1
 TIM3.Prescaler=96-1
 TIM3.Pulse-PWM\ Generation1\ CH1=512
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1
-TIM4.Period=1024-1
-TIM4.Prescaler=3072-1
-TIM4.Pulse-PWM\ Generation1\ CH1=16
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1,TIM_MasterOutputTrigger,OC1Preload_PWM
+TIM4.OC1Preload_PWM=DISABLE
+TIM4.Period=32-1
+TIM4.Prescaler=0
+TIM4.Pulse-PWM\ Generation1\ CH1=1
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -338,6 +326,10 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
+VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
+VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM4_VS_ControllerModeClock.Signal=TIM4_VS_ControllerModeClock
 board=NUCLEO-F413ZH
 boardIOC=true
 rtos.0.ip=FREERTOS
