--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -15,44 +15,48 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP4=TIM1
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD12
-Mcu.Pin11=PG6
-Mcu.Pin12=PG7
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PD12
+Mcu.Pin13=PG6
+Mcu.Pin14=PG7
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PC8
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB3
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_SYS_VS_tim7
-Mcu.Pin28=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin29=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA6
-Mcu.Pin6=PB0
-Mcu.Pin7=PB14
-Mcu.Pin8=PD8
-Mcu.Pin9=PD9
-Mcu.PinsNb=30
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PB3
+Mcu.Pin27=PB7
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin3=PF10
+Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin31=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin4=PH0 - OSC_IN
+Mcu.Pin5=PH1 - OSC_OUT
+Mcu.Pin6=PA6
+Mcu.Pin7=PB0
+Mcu.Pin8=PE9
+Mcu.Pin9=PB14
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -160,6 +164,8 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE9.Signal=S_TIM1_CH1
+PF10.Signal=S_TIM1_ETR
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -206,7 +212,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -292,6 +298,10 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_ETR.0=TIM1_ETR,TriggerSource_ETR
+SH.S_TIM1_ETR.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
@@ -300,6 +310,11 @@ SH.S_TIM3_CH4.0=TIM3_CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Prescaler
+TIM1.Period=1024-1
+TIM1.Prescaler=0
+TIM1.Pulse-PWM\ Generation1\ CH1=128
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
@@ -326,6 +341,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM1_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM1_VS_ControllerModeClock.Signal=TIM1_VS_ControllerModeClock
 VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
 VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
