--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -25,37 +25,37 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD8
-Mcu.Pin11=PD9
-Mcu.Pin12=PD12
-Mcu.Pin13=PG6
-Mcu.Pin14=PG7
-Mcu.Pin15=PC6
-Mcu.Pin16=PC7
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
+Mcu.Pin10=PD9
+Mcu.Pin11=PD12
+Mcu.Pin12=PG6
+Mcu.Pin13=PG7
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PB3
-Mcu.Pin27=PB7
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PB3
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin28=VP_SYS_VS_tim7
+Mcu.Pin29=VP_TIM1_VS_ControllerModeClock
 Mcu.Pin3=PF10
-Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin30=VP_TIM1_VS_no_output1
 Mcu.Pin31=VP_TIM4_VS_ControllerModeClock
 Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin4=PH0 - OSC_IN
 Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
 Mcu.Pin7=PB0
-Mcu.Pin8=PE9
-Mcu.Pin9=PB14
+Mcu.Pin8=PB14
+Mcu.Pin9=PD8
 Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -76,6 +76,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
+NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
@@ -164,7 +165,6 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE9.Signal=S_TIM1_CH1
 PF10.Signal=S_TIM1_ETR
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -298,8 +298,6 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
-SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_ETR.0=TIM1_ETR,TriggerSource_ETR
 SH.S_TIM1_ETR.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
@@ -310,11 +308,11 @@ SH.S_TIM3_CH4.0=TIM3_CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Prescaler
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Period,Prescaler,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output
 TIM1.Period=1024-1
 TIM1.Prescaler=0
-TIM1.Pulse-PWM\ Generation1\ CH1=128
+TIM1.Pulse-Output\ Compare1\ No\ Output=100
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
@@ -343,6 +341,8 @@ VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 VP_TIM1_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM1_VS_ControllerModeClock.Signal=TIM1_VS_ControllerModeClock
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
 VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
