encoder interrupts shown

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -25,38 +25,39 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD9
-Mcu.Pin11=PD12
-Mcu.Pin12=PG6
-Mcu.Pin13=PG7
-Mcu.Pin14=PC6
-Mcu.Pin15=PC7
-Mcu.Pin16=PC8
-Mcu.Pin17=PC9
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PD12
+Mcu.Pin13=PG6
+Mcu.Pin14=PG7
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PC8
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PB3
-Mcu.Pin26=PB7
-Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin28=VP_SYS_VS_tim7
-Mcu.Pin29=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PB3
+Mcu.Pin27=PB7
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_SYS_VS_tim7
 Mcu.Pin3=PF10
-Mcu.Pin30=VP_TIM1_VS_no_output1
-Mcu.Pin31=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin31=VP_TIM1_VS_no_output1
+Mcu.Pin32=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin33=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin4=PH0 - OSC_IN
 Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
-Mcu.Pin7=PB0
-Mcu.Pin8=PB14
-Mcu.Pin9=PD8
-Mcu.PinsNb=33
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB14
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -142,14 +143,18 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=TEST2
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LED_Int
+PC6.GPIO_Label=Marker_Int
 PC6.Locked=true
 PC6.Signal=GPXTI6
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=TEST
+PC8.GPIO_Label=TEST1
 PC8.Locked=true
 PC8.Signal=GPIO_Output
 PC9.Locked=true
