--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -25,12 +25,12 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD8
-Mcu.Pin11=PD9
-Mcu.Pin12=PD12
-Mcu.Pin13=PG6
-Mcu.Pin14=PG7
-Mcu.Pin15=PC6
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PD12
+Mcu.Pin14=PG6
+Mcu.Pin15=PG7
 Mcu.Pin16=PC7
 Mcu.Pin17=PC8
 Mcu.Pin18=PC9
@@ -56,7 +56,7 @@ Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
-Mcu.Pin9=PB14
+Mcu.Pin9=PE9
 Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -65,7 +65,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -147,10 +147,6 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=TEST2
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=Marker_Int
-PC6.Locked=true
-PC6.Signal=GPXTI6
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Label
@@ -170,6 +166,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=Marker_Int
+PE9.Locked=true
+PE9.Signal=GPXTI9
 PF10.Signal=S_TIM1_ETR
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -301,8 +301,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.GPXTI6.0=GPIO_EXTI6
-SH.GPXTI6.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM1_ETR.0=TIM1_ETR,TriggerSource_ETR
 SH.S_TIM1_ETR.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
