marker interrupts shown

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -25,39 +25,40 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PD12
-Mcu.Pin14=PG6
-Mcu.Pin15=PG7
-Mcu.Pin16=PC7
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
+Mcu.Pin10=PB12
+Mcu.Pin11=PB14
+Mcu.Pin12=PD8
+Mcu.Pin13=PD9
+Mcu.Pin14=PD12
+Mcu.Pin15=PG6
+Mcu.Pin16=PG7
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PB3
-Mcu.Pin27=PB7
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PB3
+Mcu.Pin28=PB7
+Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin3=PF10
-Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
-Mcu.Pin31=VP_TIM1_VS_no_output1
-Mcu.Pin32=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin33=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin30=VP_SYS_VS_tim7
+Mcu.Pin31=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin32=VP_TIM1_VS_no_output1
+Mcu.Pin33=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin34=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin4=PH0 - OSC_IN
 Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
 Mcu.Pin9=PE9
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -121,6 +122,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=TEST3
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
