--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -319,10 +319,11 @@ SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Period,Prescaler,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output
+TIM1.IPParameters=Period,Prescaler,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,Slave_TriggerFilter
 TIM1.Period=1024-1
 TIM1.Prescaler=0
 TIM1.Pulse-Output\ Compare1\ No\ Output=100
+TIM1.Slave_TriggerFilter=8
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
