--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -26,40 +26,38 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB12
-Mcu.Pin11=PB14
-Mcu.Pin12=PD8
-Mcu.Pin13=PD9
-Mcu.Pin14=PD12
-Mcu.Pin15=PG6
-Mcu.Pin16=PG7
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PD12
+Mcu.Pin14=PG6
+Mcu.Pin15=PG7
+Mcu.Pin16=PC7
+Mcu.Pin17=PC8
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin3=PF10
-Mcu.Pin30=VP_SYS_VS_tim7
-Mcu.Pin31=VP_TIM1_VS_ControllerModeClock
-Mcu.Pin32=VP_TIM1_VS_no_output1
-Mcu.Pin33=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin34=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin4=PH0 - OSC_IN
-Mcu.Pin5=PH1 - OSC_OUT
-Mcu.Pin6=PA6
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=PE9
-Mcu.PinsNb=35
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PB3
+Mcu.Pin27=PB7
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin31=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin5=PA6
+Mcu.Pin6=PC5
+Mcu.Pin7=PB0
+Mcu.Pin8=PE9
+Mcu.Pin9=PB12
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -67,7 +65,6 @@ MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -79,7 +76,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
-NVIC.TIM1_CC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
@@ -172,11 +169,7 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE9.GPIOParameters=GPIO_Label
-PE9.GPIO_Label=Marker_Int
-PE9.Locked=true
-PE9.Signal=GPXTI9
-PF10.Signal=S_TIM1_ETR
+PE9.Signal=S_TIM1_CH1
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -307,10 +300,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
-SH.S_TIM1_ETR.0=TIM1_ETR,TriggerSource_ETR
-SH.S_TIM1_ETR.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,TriggerSource_TI1FP1
+SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
@@ -319,12 +310,8 @@ SH.S_TIM3_CH4.0=TIM3_CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Period,Prescaler,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,Slave_TriggerFilter
+TIM1.IPParameters=Period
 TIM1.Period=1024-1
-TIM1.Prescaler=0
-TIM1.Pulse-Output\ Compare1\ No\ Output=100
-TIM1.Slave_TriggerFilter=8
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
@@ -353,8 +340,6 @@ VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 VP_TIM1_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM1_VS_ControllerModeClock.Signal=TIM1_VS_ControllerModeClock
-VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
 VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
