--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -48,16 +48,15 @@ Mcu.Pin27=PB7
 Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin29=VP_SYS_VS_tim7
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=VP_TIM1_VS_ControllerModeClock
-Mcu.Pin31=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin32=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin30=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin31=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA6
 Mcu.Pin6=PC5
 Mcu.Pin7=PB0
 Mcu.Pin8=PE9
 Mcu.Pin9=PB12
-Mcu.PinsNb=33
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -300,7 +299,7 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,TriggerSource_TI1FP1
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
@@ -310,7 +309,8 @@ SH.S_TIM3_CH4.0=TIM3_CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-TIM1.IPParameters=Period
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Period
 TIM1.Period=1024-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -338,8 +338,6 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
-VP_TIM1_VS_ControllerModeClock.Mode=Clock Mode
-VP_TIM1_VS_ControllerModeClock.Signal=TIM1_VS_ControllerModeClock
 VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
 VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
