--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -20,8 +20,9 @@ Mcu.IP4=TIM1
 Mcu.IP5=TIM3
 Mcu.IP6=TIM4
 Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP8=USB_DEVICE
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -53,13 +54,14 @@ Mcu.Pin31=VP_TIM1_VS_ControllerModeClock
 Mcu.Pin32=VP_TIM1_VS_no_output1
 Mcu.Pin33=VP_TIM4_VS_ControllerModeClock
 Mcu.Pin34=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH0 - OSC_IN
 Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
 Mcu.Pin9=PE9
-Mcu.PinsNb=35
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -72,6 +74,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
@@ -205,7 +208,7 @@ ProjectManager.DeviceId=STM32F413ZHTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x600
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -223,7 +226,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -345,8 +348,13 @@ TIM4.Pulse-PWM\ Generation1\ CH1=1
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
-USB_OTG_FS.IPParameters=VirtualMode
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode,battery_charging_enable
 USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.battery_charging_enable=DISABLE
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
@@ -359,6 +367,8 @@ VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
 VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM4_VS_ControllerModeClock.Signal=TIM4_VS_ControllerModeClock
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F413ZH
 boardIOC=true
 rtos.0.ip=FREERTOS
