test4 pin added

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -28,41 +28,42 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB12
-Mcu.Pin11=PB14
-Mcu.Pin12=PD8
-Mcu.Pin13=PD9
-Mcu.Pin14=PD12
-Mcu.Pin15=PG6
-Mcu.Pin16=PG7
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin10=PE9
+Mcu.Pin11=PB12
+Mcu.Pin12=PB14
+Mcu.Pin13=PD8
+Mcu.Pin14=PD9
+Mcu.Pin15=PD12
+Mcu.Pin16=PG6
+Mcu.Pin17=PG7
+Mcu.Pin18=PC7
+Mcu.Pin19=PC8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin20=PC9
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PB3
+Mcu.Pin29=PB7
 Mcu.Pin3=PF10
-Mcu.Pin30=VP_SYS_VS_tim7
-Mcu.Pin31=VP_TIM1_VS_ControllerModeClock
-Mcu.Pin32=VP_TIM1_VS_no_output1
-Mcu.Pin33=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin34=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=VP_SYS_VS_tim7
+Mcu.Pin32=VP_TIM1_VS_ControllerModeClock
+Mcu.Pin33=VP_TIM1_VS_no_output1
+Mcu.Pin34=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin35=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH0 - OSC_IN
 Mcu.Pin5=PH1 - OSC_OUT
 Mcu.Pin6=PA6
 Mcu.Pin7=PC5
 Mcu.Pin8=PB0
-Mcu.Pin9=PE9
-Mcu.PinsNb=36
+Mcu.Pin9=PB2
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -135,6 +136,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=TEST4
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
