logger mutex added

--- a/F413-freertos-test.ioc
+++ b/F413-freertos-test.ioc
@@ -4,7 +4,8 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Timers01,Queues01
+FREERTOS.IPParameters=Tasks01,INCLUDE_xEventGroupSetBitFromISR,FootprintOK,Timers01,Queues01,Mutexes01
+FREERTOS.Mutexes01=loggerMutex,Dynamic,NULL
 FREERTOS.Queues01=USB_rcvQueue,4,8,1,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LedTrigger,29,128,LedTriggerStart,Default,NULL,Dynamic,NULL,NULL;LedToggle,29,128,LedToggleStart,Default,NULL,Dynamic,NULL,NULL;USB_rcv,16,128,USB_rcvStart,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=MarkerLedTimer,MarkerLedCbk,osTimerOnce,Default,NULL,Dynamic,NULL
